# odroidpc

./: README
boot/: boot.ini
dosbox-arm/: Makefile.in  README  config.h.in  configure  configure.ac  dosbox-SVN.conf
dosbox-arm/docs/: Makefile.in
dosbox-arm/include/: Makefile.in  math_neon.h
dosbox-arm/src/: Makefile.am  Makefile.in  dosbox.cpp
dosbox-arm/src/cpu/: Makefile.in
dosbox-arm/src/cpu/core_dynrec/: Makefile.in  dyn_fpu.h
dosbox-arm/src/cpu/core_normal/: Makefile.in
dosbox-arm/src/dos/: dos_programs.cpp
dosbox-arm/src/fpu/: fpu_instructions_neon.h
dosbox-arm/src/gui/: render.cpp  sdlmain.cpp
dosbox-arm/src/hardware/: Makefile.am  Makefile.in  ide.cpp  memory.cpp  mixer.cpp  vga_draw.cpp
dosbox-arm/src/ints/: Makefile.in
dosbox-arm/src/libs/: Makefile.in
dosbox-arm/src/math_neon/: Makefile.am  Makefile.in  math_runfast.cpp  math_sincosf.cpp  math_vec2.cpp  math_vec4.cpp
dosbox-arm/src/misc/: Makefile.in
dosbox-arm/src/platform/: Makefile.in
dosbox-arm/src/platform/visualc/: Makefile.in
dosbox-arm/src/sdl_cdrom/: Makefile.in
dosbox-arm/src/sdl_cdrom/macos/: Makefile.in
dosbox-arm/src/sdl_cdrom/macosx/: Makefile.in
dosbox-arm/visualc_net/: Makefile.in
etc/: modules
etc/init.d/: ttymidi.sh
kernel/: config  meson8b_odroidc.dts  odroidpc_gpio_backlight.patch  odroidpc_pwm_backlight.patch  odroidpc_sgtl5000.patch
ttymidi/: README
ttymidi/src/: ttymidi.c
usb_keyboard/: README
usb_keyboard/firmware/: Makefile  main.c  usb.c  usb.h
usb_keyboard/hardware/: usb_keyboard.brd  usb_keyboard.sch
